Fix capability parsing